--- a/code/base/jk2config.cfg
+++ b/code/base/jk2config.cfg
@@ -19,6 +19,7 @@ bind - "weapon 0"
 bind . "+moveright"
 bind / "+mlook"
 bind 0 "weapon 10"
+bind 1 "weapon 1"
 bind 2 "weapon 2"
 bind 3 "weapon 3"
 bind 4 "weapon 4"
@@ -64,242 +65,242 @@ bind F11 "uimenu ingamesavemenu"
 bind END "centerview"
 bind PGDN "+lookdown"
 bind MOUSE3 "zoom"
-bind MOUSE5 "force_throw"
+bind MOUSE5 "+force_lightning"
 bind DOWNARROW "+back"
 bind LEFTARROW "+left"
 bind RIGHTARROW "+right"
-seta com_maxfps "125"
-seta sp_language "1"
-seta in_midi "0"
-seta in_midiport "1"
-seta in_midichannel "1"
-seta in_mididevice "0"
-seta in_mouse "-1"
-seta in_mouse_raw "1"
-seta in_joystick "0"
-seta in_joyBallScale "0.02"
-seta joy_threshold "0.15"
-seta js_ffmult "3.0"
-seta joy_xbutton "1"
-seta joy_ybutton "0"
-seta sv_speedrunModeIL "0"
-seta sv_speedrunModeCheckpoint "0"
-seta sv_speedrunModeCheckpointSave "0"
-seta sv_timedCheckpointMinX "0"
-seta sv_timedCheckpointMinY "0"
-seta sv_timedCheckpointMinZ "0"
-seta sv_timedCheckpointMaxX "0"
-seta sv_timedCheckpointMaxY "0"
-seta sv_timedCheckpointMaxZ "0"
-seta conAlpha "1.6"
-seta panoNumShots "10"
-seta cl_yawspeed "140"
-seta cl_pitchspeed "140"
-seta cl_anglespeedkey "1.5"
-seta cl_maxpackets "30"
-seta cl_packetdup "1"
-seta cl_run "1"
-seta sensitivity "5"
-seta cl_mouseAccel "0"
-seta cl_freelook "1"
-seta cl_ingameVideo "1"
-seta cl_VideoQuality "0"
-seta cg_autoswitch "0"
-seta m_pitch "0.022"
-seta m_yaw "0.022"
-seta m_forward "0.25"
-seta m_side "0.25"
-seta m_filter "0"
-seta name "Kyle"
-seta snaps "20"
-seta sex "male"
-seta handicap "100"
-seta r_allowExtensions "1"
-seta r_ext_compress_textures "1"
-seta r_ext_compress_lightmaps "0"
-seta r_ext_preferred_tc_method "0"
-seta r_ext_gamma_control "1"
-seta r_ext_multitexture "1"
-seta r_ext_compiled_vertex_array "1"
-seta r_ext_texture_env_add "1"
-seta r_ext_texture_filter_anisotropic "1"
-seta r_picmip "1"
-seta r_detailtextures "1"
-seta r_texturebits "0"
-seta r_texturebitslm "0"
-seta r_colorbits "32"
-seta r_stereo "0"
-seta r_stencilbits "8"
-seta r_depthbits "24"
-seta r_overBrightBits "1"
-seta r_ignorehwgamma "0"
-seta r_mode "8"
-seta r_fullscreen "0"
-seta r_customwidth "1600"
-seta r_customheight "1024"
-seta r_customaspect "1"
-seta r_simpleMipMaps "1"
-seta r_vertexLight "0"
-seta r_subdivisions "4"
-seta r_ignoreFastPath "1"
-seta r_intensity "1"
-seta r_lodCurveError "250"
-seta r_lodbias "0"
-seta r_flares "1"
-seta r_lodscale "10"
-seta r_ignoreGLErrors "1"
-seta r_fastsky "0"
-seta r_drawSun "0"
-seta r_dynamiclight "1"
-seta r_dlightBacks "1"
-seta r_finish "0"
-seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
-seta r_swapInterval "0"
-seta r_gamma "1.359375"
-seta r_facePlaneCull "1"
-seta r_primitives "0"
-seta r_showtriscolor "0"
-seta cg_shadows "0"
-seta r_modelpoolmegs "20"
-seta r_lastValidRenderer "NVIDIA GeForce RTX 3060/PCIe/SSE2"
-seta vid_xpos "0"
-seta vid_ypos "0"
-seta s_volume "0.039062"
-seta s_volumeVoice "0.039062"
-seta s_musicvolume "0.015625"
-seta s_separation "0.5"
-seta s_khz "22"
-seta s_allowDynamicMusic "1"
-seta s_mixahead "0.2"
-seta s_mixPreStep "0.05"
-seta s_language "francais"
-seta s_mp3overhead "31756"
-seta s_UseOpenAL "0"
-seta s_soundpoolmegs "25"
-seta use_ff "1"
-seta ff_channels "0,0;1,0;2,0;3,0;4,0;5,0"
-seta ff_delay "40"
-seta cg_drawCrosshair "1"
-seta cg_marks "1"
-seta ui_menuFiles "ui/menus.txt"
-seta ui_smallFont "0.25"
-seta ui_bigFont "0.4"
-seta cg_hudFiles "ui/jk2hud.txt"
-seta ui_r_glCustom "4"
-seta g_subtitles "2"
-seta cg_saberAutoThird "0"
-seta cg_gunAutoFirst "1"
-seta cg_drawSpeed "0"
-seta g_spskill "0"
-seta cg_crosshairForceHint "1"
-seta cm_playerCurveClip "1"
-seta cg_drawGun "1"
-seta cg_stereoSeparation "0.4"
-seta cg_draw2D "1"
-seta cg_drawStatus "1"
-seta cg_drawTimer "1"
-seta cg_drawFPS "1"
-seta cg_drawServerFPS "1"
-seta cg_drawSnapshot "0"
-seta cg_drawAmmoWarning "1"
-seta cg_dynamicCrosshair "1"
-seta cg_crosshairIdentifyTarget "1"
-seta cg_crosshairSize "24"
-seta cg_crosshairX "0"
-seta cg_crosshairY "0"
-seta cg_simpleItems "0"
-seta cg_runpitch "0.002"
-seta cg_runroll "0.005"
-seta cg_bobup "0.005"
-seta cg_bobpitch "0.002"
-seta cg_bobroll "0.002"
-seta cg_missionInfoCentered "1"
-seta cg_reliableAnimSounds "1"
-seta cg_drawSecrets "0"
-seta cg_drawSpeedrunTotalTimer "4"
-seta cg_drawSpeedrunLevelTimer "1"
-seta cg_drawOverbounceInfo "0"
-seta cg_drawJumpHelper "0"
-seta cg_jumpHelperX "0"
-seta cg_jumpHelperY "0"
-seta cg_jumpHelperWidth "300"
-seta cg_jumpHelperHeight "20"
-seta cg_jumpHelperHorizontal "1"
-seta cg_jumpHelperMirror "1"
-seta cg_jumpHelperAutoScale "0"
-seta cg_jumpHelperCrouch "1"
-seta cg_jumpHelperCurrentScale "0.5"
-seta cg_jumpHelperColorBackgroundR "0.0"
-seta cg_jumpHelperColorBackgroundG "0.0"
-seta cg_jumpHelperColorBackgroundB "0.0"
-seta cg_jumpHelperColorBackgroundA "0.2"
-seta cg_jumpHelperColorCancelR "0.8"
-seta cg_jumpHelperColorCancelG "0.8"
-seta cg_jumpHelperColorCancelB "0.8"
-seta cg_jumpHelperColorCancelA "0.75"
-seta cg_jumpHelperColorCrouchR "0.0"
-seta cg_jumpHelperColorCrouchG "1.0"
-seta cg_jumpHelperColorCrouchB "1.0"
-seta cg_jumpHelperColorCrouchA "0.75"
-seta cg_jumpHelperColorCrouchExtendR "0.0"
-seta cg_jumpHelperColorCrouchExtendG "0.333"
-seta cg_jumpHelperColorCrouchExtendB "0.333"
-seta cg_jumpHelperColorCrouchExtendA "0.375"
-seta cg_jumpHelperColorCurrentR "1.0"
-seta cg_jumpHelperColorCurrentG "1.0"
-seta cg_jumpHelperColorCurrentB "1.0"
-seta cg_jumpHelperColorCurrentA "0.75"
-seta cg_jumpHelperColorExtendR "0.0"
-seta cg_jumpHelperColorExtendG "0.5"
-seta cg_jumpHelperColorExtendB "0.125"
-seta cg_jumpHelperColorExtendA "0.375"
-seta cg_jumpHelperColorOptimalR "0.0"
-seta cg_jumpHelperColorOptimalG "1.0"
-seta cg_jumpHelperColorOptimalB "0.25"
-seta cg_jumpHelperColorOptimalA "0.75"
-seta cg_speedScale "0.9"
-seta cg_speedX "0"
-seta cg_speedY "75"
-seta cg_speedColorR "1.0"
-seta cg_speedColorG "1.0"
-seta cg_speedColorB "1.0"
-seta cg_speedColorA "0.9"
-seta cg_drawStrafeHelper "0"
-seta cg_strafeHelperCenter "1"
-seta cg_strafeHelperCenterMarker "1"
-seta cg_strafeHelperHeight "20"
-seta cg_strafeHelperScale "4"
-seta cg_strafeHelperSpeedScale "0.9"
-seta cg_strafeHelperSpeedX "0"
-seta cg_strafeHelperSpeedY "0"
-seta cg_strafeHelperY "50"
-seta cg_strafeHelperColorAcceleratingR "0.0"
-seta cg_strafeHelperColorAcceleratingG "0.5"
-seta cg_strafeHelperColorAcceleratingB "0.125"
-seta cg_strafeHelperColorAcceleratingA "0.375"
-seta cg_strafeHelperColorOptimalR "0.0"
-seta cg_strafeHelperColorOptimalG "1.0"
-seta cg_strafeHelperColorOptimalB "0.25"
-seta cg_strafeHelperColorOptimalA "0.75"
-seta cg_strafeHelperColorCenterMarkerR "1.0"
-seta cg_strafeHelperColorCenterMarkerG "1.0"
-seta cg_strafeHelperColorCenterMarkerB "1.0"
-seta cg_strafeHelperColorCenterMarkerA "0.75"
-seta cg_strafeHelperColorSpeedR "1.0"
-seta cg_strafeHelperColorSpeedG "1.0"
-seta cg_strafeHelperColorSpeedB "1.0"
-seta cg_strafeHelperColorSpeedA "0.9"
-seta g_dismemberment "3"
-seta g_dismemberProbabilities "1"
-seta g_saberAutoBlocking "1"
-seta g_saberRealisticCombat "0"
-seta g_saberMoveSpeed "1"
-seta g_saberAnimSpeed "1"
-seta g_saberAutoAim "1"
-seta g_saber_color "yellow"
-seta g_speedFactorLanding "1.0"
-seta ui_iscensored "0"
-seta d_slowmodeath "0"
-seta svfps1 "sv_fps 20; echo sv_fps 20; bind kp_ins vstr svfps2"
-seta svfps2 "sv_fps 125;echo sv_fps 125; bind kp_ins vstr svfps1"
 seta r_weatherScale "1"
+seta svfps2 "sv_fps 125;echo sv_fps 125; bind kp_ins vstr svfps1"
+seta svfps1 "sv_fps 20; echo sv_fps 20; bind kp_ins vstr svfps2"
+seta d_slowmodeath "0"
+seta ui_iscensored "0"
+seta g_speedFactorLanding "1.0"
+seta g_saber_color "yellow"
+seta g_saberAutoAim "1"
+seta g_saberAnimSpeed "1"
+seta g_saberMoveSpeed "1"
+seta g_saberRealisticCombat "0"
+seta g_saberAutoBlocking "1"
+seta g_dismemberProbabilities "1"
+seta g_dismemberment "3"
+seta cg_strafeHelperColorSpeedA "0.9"
+seta cg_strafeHelperColorSpeedB "1.0"
+seta cg_strafeHelperColorSpeedG "1.0"
+seta cg_strafeHelperColorSpeedR "1.0"
+seta cg_strafeHelperColorCenterMarkerA "0.75"
+seta cg_strafeHelperColorCenterMarkerB "1.0"
+seta cg_strafeHelperColorCenterMarkerG "1.0"
+seta cg_strafeHelperColorCenterMarkerR "1.0"
+seta cg_strafeHelperColorOptimalA "0.75"
+seta cg_strafeHelperColorOptimalB "0.25"
+seta cg_strafeHelperColorOptimalG "1.0"
+seta cg_strafeHelperColorOptimalR "0.0"
+seta cg_strafeHelperColorAcceleratingA "0.375"
+seta cg_strafeHelperColorAcceleratingB "0.125"
+seta cg_strafeHelperColorAcceleratingG "0.5"
+seta cg_strafeHelperColorAcceleratingR "0.0"
+seta cg_strafeHelperY "50"
+seta cg_strafeHelperSpeedY "0"
+seta cg_strafeHelperSpeedX "0"
+seta cg_strafeHelperSpeedScale "0.9"
+seta cg_strafeHelperScale "4"
+seta cg_strafeHelperHeight "20"
+seta cg_strafeHelperCenterMarker "1"
+seta cg_strafeHelperCenter "1"
+seta cg_drawStrafeHelper "0"
+seta cg_speedColorA "0.9"
+seta cg_speedColorB "1.0"
+seta cg_speedColorG "1.0"
+seta cg_speedColorR "1.0"
+seta cg_speedY "75"
+seta cg_speedX "0"
+seta cg_speedScale "0.9"
+seta cg_jumpHelperColorOptimalA "0.75"
+seta cg_jumpHelperColorOptimalB "0.25"
+seta cg_jumpHelperColorOptimalG "1.0"
+seta cg_jumpHelperColorOptimalR "0.0"
+seta cg_jumpHelperColorExtendA "0.375"
+seta cg_jumpHelperColorExtendB "0.125"
+seta cg_jumpHelperColorExtendG "0.5"
+seta cg_jumpHelperColorExtendR "0.0"
+seta cg_jumpHelperColorCurrentA "0.75"
+seta cg_jumpHelperColorCurrentB "1.0"
+seta cg_jumpHelperColorCurrentG "1.0"
+seta cg_jumpHelperColorCurrentR "1.0"
+seta cg_jumpHelperColorCrouchExtendA "0.375"
+seta cg_jumpHelperColorCrouchExtendB "0.333"
+seta cg_jumpHelperColorCrouchExtendG "0.333"
+seta cg_jumpHelperColorCrouchExtendR "0.0"
+seta cg_jumpHelperColorCrouchA "0.75"
+seta cg_jumpHelperColorCrouchB "1.0"
+seta cg_jumpHelperColorCrouchG "1.0"
+seta cg_jumpHelperColorCrouchR "0.0"
+seta cg_jumpHelperColorCancelA "0.75"
+seta cg_jumpHelperColorCancelB "0.8"
+seta cg_jumpHelperColorCancelG "0.8"
+seta cg_jumpHelperColorCancelR "0.8"
+seta cg_jumpHelperColorBackgroundA "0.2"
+seta cg_jumpHelperColorBackgroundB "0.0"
+seta cg_jumpHelperColorBackgroundG "0.0"
+seta cg_jumpHelperColorBackgroundR "0.0"
+seta cg_jumpHelperCurrentScale "0.5"
+seta cg_jumpHelperCrouch "1"
+seta cg_jumpHelperAutoScale "0"
+seta cg_jumpHelperMirror "1"
+seta cg_jumpHelperHorizontal "1"
+seta cg_jumpHelperHeight "20"
+seta cg_jumpHelperWidth "300"
+seta cg_jumpHelperY "0"
+seta cg_jumpHelperX "0"
+seta cg_drawJumpHelper "0"
+seta cg_drawOverbounceInfo "0"
+seta cg_drawSpeedrunLevelTimer "1"
+seta cg_drawSpeedrunTotalTimer "4"
+seta cg_drawSecrets "0"
+seta cg_reliableAnimSounds "1"
+seta cg_missionInfoCentered "1"
+seta cg_bobroll "0.002"
+seta cg_bobpitch "0.002"
+seta cg_bobup "0.005"
+seta cg_runroll "0.005"
+seta cg_runpitch "0.002"
+seta cg_simpleItems "0"
+seta cg_crosshairY "0"
+seta cg_crosshairX "0"
+seta cg_crosshairSize "24"
+seta cg_crosshairIdentifyTarget "1"
+seta cg_dynamicCrosshair "1"
+seta cg_drawAmmoWarning "1"
+seta cg_drawSnapshot "0"
+seta cg_drawServerFPS "1"
+seta cg_drawFPS "1"
+seta cg_drawTimer "1"
+seta cg_drawStatus "1"
+seta cg_draw2D "1"
+seta cg_stereoSeparation "0.4"
+seta cg_drawGun "1"
+seta cm_playerCurveClip "1"
+seta cg_crosshairForceHint "1"
+seta g_spskill "0"
+seta cg_drawSpeed "0"
+seta cg_gunAutoFirst "1"
+seta cg_saberAutoThird "0"
+seta g_subtitles "2"
+seta ui_r_glCustom "4"
+seta cg_hudFiles "ui/jk2hud.txt"
+seta ui_bigFont "0.4"
+seta ui_smallFont "0.25"
+seta ui_menuFiles "ui/menus.txt"
+seta cg_marks "1"
+seta cg_drawCrosshair "1"
+seta ff_delay "40"
+seta ff_channels "0,0;1,0;2,0;3,0;4,0;5,0"
+seta use_ff "1"
+seta s_soundpoolmegs "25"
+seta s_UseOpenAL "0"
+seta s_mp3overhead "31756"
+seta s_language "francais"
+seta s_mixPreStep "0.05"
+seta s_mixahead "0.2"
+seta s_allowDynamicMusic "1"
+seta s_khz "22"
+seta s_separation "0.5"
+seta s_musicvolume "0.015625"
+seta s_volumeVoice "0.039062"
+seta s_volume "0.039062"
+seta vid_ypos "0"
+seta vid_xpos "0"
+seta r_lastValidRenderer "NVIDIA GeForce RTX 3060/PCIe/SSE2"
+seta r_modelpoolmegs "20"
+seta cg_shadows "0"
+seta r_showtriscolor "0"
+seta r_primitives "0"
+seta r_facePlaneCull "1"
+seta r_gamma "1.359375"
+seta r_swapInterval "0"
+seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
+seta r_finish "0"
+seta r_dlightBacks "1"
+seta r_dynamiclight "1"
+seta r_drawSun "0"
+seta r_fastsky "0"
+seta r_ignoreGLErrors "1"
+seta r_lodscale "10"
+seta r_flares "1"
+seta r_lodbias "0"
+seta r_lodCurveError "250"
+seta r_intensity "1"
+seta r_ignoreFastPath "1"
+seta r_subdivisions "4"
+seta r_vertexLight "0"
+seta r_simpleMipMaps "1"
+seta r_customaspect "1"
+seta r_customheight "1024"
+seta r_customwidth "1600"
+seta r_fullscreen "0"
+seta r_mode "8"
+seta r_ignorehwgamma "0"
+seta r_overBrightBits "1"
+seta r_depthbits "24"
+seta r_stencilbits "8"
+seta r_stereo "0"
+seta r_colorbits "32"
+seta r_texturebitslm "0"
+seta r_texturebits "0"
+seta r_detailtextures "1"
+seta r_picmip "1"
+seta r_ext_texture_filter_anisotropic "1"
+seta r_ext_texture_env_add "1"
+seta r_ext_compiled_vertex_array "1"
+seta r_ext_multitexture "1"
+seta r_ext_gamma_control "1"
+seta r_ext_preferred_tc_method "0"
+seta r_ext_compress_lightmaps "0"
+seta r_ext_compress_textures "1"
+seta r_allowExtensions "1"
+seta handicap "100"
+seta sex "male"
+seta snaps "20"
+seta name "Kyle"
+seta m_filter "0"
+seta m_side "0.25"
+seta m_forward "0.25"
+seta m_yaw "0.022"
+seta m_pitch "0.022"
+seta cg_autoswitch "0"
+seta cl_VideoQuality "0"
+seta cl_ingameVideo "1"
+seta cl_freelook "1"
+seta cl_mouseAccel "0"
+seta sensitivity "5"
+seta cl_run "1"
+seta cl_packetdup "1"
+seta cl_maxpackets "30"
+seta cl_anglespeedkey "1.5"
+seta cl_pitchspeed "140"
+seta cl_yawspeed "140"
+seta panoNumShots "10"
+seta conAlpha "1.6"
+seta sv_timedCheckpointMaxZ "0"
+seta sv_timedCheckpointMaxY "0"
+seta sv_timedCheckpointMaxX "0"
+seta sv_timedCheckpointMinZ "0"
+seta sv_timedCheckpointMinY "0"
+seta sv_timedCheckpointMinX "0"
+seta sv_speedrunModeCheckpointSave "0"
+seta sv_speedrunModeCheckpoint "0"
+seta sv_speedrunModeIL "0"
+seta joy_ybutton "0"
+seta joy_xbutton "1"
+seta js_ffmult "3.0"
+seta joy_threshold "0.15"
+seta in_joyBallScale "0.02"
+seta in_joystick "0"
+seta in_mouse_raw "1"
+seta in_mouse "-1"
+seta in_mididevice "0"
+seta in_midichannel "1"
+seta in_midiport "1"
+seta in_midi "0"
+seta sp_language "1"
+seta com_maxfps "125"
